objects/OpportunityProduct__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>StrategyProduct__r.AffiliateLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The selected value is the primary Strategy/Product on the opportunity and will be sent to Finance if the sales stage is Won Unfunded or Won Funded.</description>
        <inlineHelpText>The selected value is the primary Strategy/Product on the opportunity and will be sent to Finance if the sales stage is Won Unfunded or Won Funded.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StrategyProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a Strategy or a Product. All strategies have an Affiliate associated to it.</inlineHelpText>
        <label>Strategy/Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.ProductVisible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Product</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Opportunity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>